# TuringMachine

./: .ocamlformat  .ocamlinit  README.md  TuringMachine.opam  dune-project  sample.lisp
lib/: Head.ml  InfixOperator.ml  State.ml  StateDiagram.ml  Tape.ml  dune  sample.lisp
test/: TuringMachineTest.ml  dune
